--- a/day14/home work/lesson14.html
+++ b/day14/home work/lesson14.html
@@ -6,6 +6,6 @@
     <title>why goa</title>
 </head>
 <body>
-    <p>გოაში იმიტომ შემოვედი ეომ მესწავლა პროგრმამირება ,გოაში მომწონს მასწავლებლები</p>
+    <p>გოაში იმიტომ შემოვედი რომ მესწავლა პროგრმამირება ,გოაში მომწონს მასწავლებლები moswavleebi da swavla ganviTAreba,ყველაზე მეტად მომწონს პროგრამირება ძალიან</p>
 </body>
 </html>
