--- a/day16/homework/lesson16.html
+++ b/day16/homework/lesson16.html
@@ -19,7 +19,6 @@
     <button>მეტი ინფორმაციისთვის დააჭირეთ ამ ღილაკს</button>
 
     
-  
-    
+    <img src="fotoo.jpg" width="250">
 </body>
 </html>
